--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "react-native-dotenv": "^2.5.3",
     "react-native-elements": "^3.3.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-radio-buttons-group": "^2.2.11",
     "react-native-reanimated": "^2.0.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "react-native-radio-buttons-group": "^2.2.11"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
